--- a/wp-content/themes/storefront/assets/sass/app/components/_homepage.scss
+++ b/wp-content/themes/storefront/assets/sass/app/components/_homepage.scss
@@ -1,4 +1,7 @@
 .page-template-template-homepage {
+	.woocommerce-breadcrumb {
+		margin-bottom: 0;
+	}
 	#primary {
 		section {
 			text-align: center;
